# youtube-recipe

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  session_log_s05.md  session_log_sprint08.md
config/: whitelist.json
config/categories/: recipe.json
migrations/: s03_add_columns.sql  s05_rls.sql  s08_extra_info.sql  s09_classification_meta.sql
src/: __init__.py  cookie_manager.py  db.py  extractor.py  filter.py  main.py  pipeline.py  search_supplement.py  stt.py  transcript.py  youtube_client.py
tests/: test_pipeline.py
